PA_Education/TestMenifest/force-app/main/default/objects/EformsignToken__c/EformsignToken__c.object-meta.xml
<CustomObject>
    <label>eformsign Token</label>
    <nameField>
        <label>eformsign Token Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>