PA_Education/TestMenifest/force-app/main/default/objects/EformsignToken__c/fields/AccessToken__c.field-meta.xml
<CustomField>
    <fullName>AccessToken__c</fullName>
    <label>Access Token</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>