PA_Education/TestMenifest/force-app/main/default/objects/EformsignToken__c/fields/ExpireDateTimeF__c.field-meta.xml
<CustomField>
    <fullName>ExpireDateTimeF__c</fullName>
    <formula>TokenIssuedDateTime__c + ExpireIn__c/(24*60*60) - 2/(24*60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expire DateTime</label>
    <type>DateTime</type>
</CustomField>