PA_Education/TestMenifest/force-app/main/default/objects/EformsignToken__c/fields/ExpireIn__c.field-meta.xml
<CustomField>
    <fullName>ExpireIn__c</fullName>
    <label>Expire In</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>