PA_Education/TestMenifest/force-app/main/default/objects/EformsignToken__c/fields/IsRefreshableF__c.field-meta.xml
<CustomField>
    <fullName>IsRefreshableF__c</fullName>
    <formula>NOW() &lt; RefreshableDateTimeF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Refreshable</label>
    <type>Checkbox</type>
</CustomField>