PA_Education/TestMenifest/force-app/main/default/objects/EformsignToken__c/fields/IsRepresentativeAdminToken__c.field-meta.xml
<CustomField>
    <fullName>IsRepresentativeAdminToken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Representative Admin Token</label>
    <type>Checkbox</type>
</CustomField>