PA_Education/TestMenifest/force-app/main/default/objects/EformsignToken__c/fields/IsUsableF__c.field-meta.xml
<CustomField>
    <fullName>IsUsableF__c</fullName>
    <formula>NOW() &lt; ExpireDateTimeF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Usable</label>
    <type>Checkbox</type>
</CustomField>