PA_Education/TestMenifest/force-app/main/default/objects/EformsignToken__c/fields/RefreshableDateTimeF__c.field-meta.xml
<CustomField>
    <fullName>RefreshableDateTimeF__c</fullName>
    <formula>TokenIssuedDateTime__c + 29.5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refreshable DateTime</label>
    <type>DateTime</type>
</CustomField>