PA_Education/TestMenifest/force-app/main/default/objects/EformsignToken__c/fields/RefreshToken__c.field-meta.xml
<CustomField>
    <fullName>RefreshToken__c</fullName>
    <label>Refresh Token</label>
    <length>45</length>
    <type>Text</type>
</CustomField>