PA_Education/TestMenifest/force-app/main/default/objects/EformsignToken__c/fields/TokenIssuedDateTime__c.field-meta.xml
<CustomField>
    <fullName>TokenIssuedDateTime__c</fullName>
    <label>Token Issued DateTime</label>
    <type>DateTime</type>
</CustomField>